flexbox media query fixes on small screens

--- a/style.css
+++ b/style.css
@@ -11,14 +11,6 @@ html {
 
 /* Header Styles */
 
-#container {
-    margin: auto;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
 #leftNavBar {
     display: flex;
     flex-direction: column;
@@ -70,30 +62,25 @@ html {
 
 /* Body Styles */
 
-#content {
-    margin-top: 25%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    padding: 10px;
-}
-
-#content #banner {
+#banner {
     display: block;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 6rem auto 1rem auto;
     width: 300px;
 }
 
 #marketing-content {
-    margin-top: 20px;
+    margin: 0px 10px;
+    padding-right: 20px;
+    padding-bottom: 1rem;
     text-align: center;
     color: #ffffff;
+    width: 100%;
 }
 
 #line-1 {
     font-size: 1.5em;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 #line-2 {
@@ -102,7 +89,7 @@ html {
 
 #buttons {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 3rem;
 }
 
 .button {
@@ -127,13 +114,14 @@ html {
 
 #footer {
     position: absolute;
-    align-items: center;
     display: flex;
+    flex-direction: column;
     bottom: 0px;
-    width: auto;
+    width: 100%;
     height: 30px;
     text-align: center;
-    padding-bottom: 1rem;
+    justify-content: center;
+    padding: 2rem 0;
 }
 
 .footer-link {
@@ -148,48 +136,73 @@ html {
     margin-bottom: -3px;
 }
 
+#copyright a {
+    font-size: 00.8em;
+    margin-top: 1.5rem;
+    color: #ffffff;
+    text-decoration: none;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 600px) {
 
-  #leftNavBar {
-      height: 10rem;
-      margin-top: 0;
-  }
-
-  #left-nav-buttons {
+#leftNavBar {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-  }
+    height: auto;
+    margin-top: 0;
+}
 
-  #right-nav-buttons {
-   font-size: .5rem;
-   display: flex;
-   justify-content: center;
-   align-content: center;
-  }
+#left-nav-buttons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
-  #content {
-      width: 100%;
-      height: auto;
-      background-color: rgba(0,0,0, .70);
-  }
+#right-nav-buttons {
+    font-size: .9rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
 
-  #marketing-content {
-      background-color: rgba(0,0,0, .70);
-  }
+#content {
+    width: 100%;
+    height: auto;
+    background-color: rgba(0,0,0, .70);
+}
 
-  #buttons {
-      display: flex;
-      flex-direction: column;
-  }
+#marketing-content {
+    background-color: rgba(0,0,0, .70);
+    margin-top: 0px;
+    width: fit-content;
+}
 
-  .button {
-      display: none;
-  }
+#buttons {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
 
-  #footer {
-      background-color: rgba(0,0,0, .70);
-  }
+.button {
+    font-size: .5rem;
+    padding: .5rem 2rem;
+    width: auto;
+}
+
+#footer {
+    background-color: rgba(0,0,0, .70);
+    position: absolute;
+    width: 100%;
+    padding: 2rem 0;
+    left: 0px;
+    bottom: 0px;
+}
 }
